--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
     - name: Build Docker image
-      run: sudo docker build -t ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1 .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1 .
   
     - name: Push Docker image
-      run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1
 
