--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
       run: npm install
     - name: npm update
       run: npm update  
+    - name: docker install
+      run: sudo apt install docker.io -y
 
     - name: Run tests
       run: npm test
