--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,10 @@ jobs:
       run: npm install
     - name: npm update
       run: npm update  
-    - name: docker install
-      run: sudo apt install docker -y
-
     - name: Run tests
       run: npm test
     - name: Get runner public IP
       run: curl ifconfig.me
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - name: Log in to DockerHub
       run: |
          if [ -z "${{ secrets.DOCKER_USERNAME }}" ] || [ -z "${{ secrets.DOCKER_PASSWORD }}" ]; then
@@ -43,8 +36,8 @@ jobs:
          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1 .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-ci-app:latest .
   
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-ci-app:v1
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-ci-app:latest
 
